--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,14 @@
 .hero {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 500px;
   background: url('https://supercell.com/_next/static/media/frontpage_hero.cfb8e642.webp') no-repeat center center / cover;
 }
 
 .navbar {
-  display: flex;
-  justify-content: baseline;
-  align-items: center;
-  padding: 20px;
   background-color: black;
-  margin-left: 100px;
-  margin-right: 100px;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+  margin-left: 80px;
+  margin-right: 40px;
 }
 
 .navbar ul {
@@ -38,7 +31,8 @@
   text-decoration: none;
 }
 .navbar-logo {
-  height: 30px;
+  height: 45px;
+  margin-left: 20px;
   
 }
 
@@ -98,22 +92,37 @@ a{
 
 .text-header{
   font-family: arial;
-  font-size: 14px;
+  font-size: 14px; 
 }
 
-.gambar{
+.txt{
+  margin-left: 25%;
+  color: pink;
+}
+
+.item{
+  flex-basis: 50%;
+  height: 150px;
+  padding: 1em;
+  overflow: hidden;
+  /* margin-left: 100px;
+  margin-bottom: 20px; */
+}
+
+.container {
   display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  gap: 1em;
 }
 
-.image{
-  position: top;
-  width: 500px;
-  justify-content: center;
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-bottom: 20px;
-  z-index: 2;
+.image {
+  width: 300px;
 }
+
+
 
 /* .icon nav{
 
@@ -122,11 +131,53 @@ a{
 } */
 
 .icon-nav-cell{
-  display: flex;
   width: 26px;  
-  
 }
 
+.coc-container {
+  width: 100%;
+  display: flex;
+  height: 600px;
+    flex-wrap: wrap;
+}
+
+.coc-item {
+  width: 50% ;
+  height: 300px;
+  overflow: hidden;
+
+}
+
+
+.coc-item img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+.games{
+  position: absolute;
+  margin-left: 600px;
+  margin-top: 300px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: xx-large;
+}
+
+.support{
+  position: absolute;
+  margin-left: 600px;
+  margin-top: 300px;
+  font-family: SupercellHeadline-Heavy,sans-serif;
+  font-size: xx-large;
+}
+
+.about{
+  position: absolute;
+  margin-left: 600px;
+  margin-top: 300px;
+  font-family: SupercellHeadline-Heavy,sans-serif;
+  font-size: xx-large;
+}
 
 
 
